--- a/sidebar.css
+++ b/sidebar.css
@@ -1,19 +1,28 @@
 * {
-    font-family: sans-serif, serif;
+    font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif;
     font-size: 16px;
 }
 
 div {
-    width: 90%;
     border: 2px solid dimgray;
-    padding-bottom: 200%;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 5%;
+    margin-top: 1vh;
+    margin-right: 2.5vw;
+    margin-left: 2.5vw;
     border-radius: 25px;
+    height: 97vh;
+    width: 95vw;
+    padding-left: 5%;
+    padding-right: 5%;
+    color: lightgray;
+    word-break: break-all;
+    user-select: text;
 }
 
-p {
-    padding-left: 5%;
-    color: lightgray;
-}
+/*#response {*/
+/*    left: 50%;*/
+/*    padding: 0 0 0 12px;*/
+
+/*    font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif;*/
+/*    font-size: 14px;*/
+/*    line-height: 1.3;*/
+/*}*/
